--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - "site/**"
       - ".github/workflows/portfolio.yml"
+  workflow_dispatch: {}
 
 permissions:
   id-token: write
